# dftd3-lib

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  GNUmakefile  Makefile  Makefile.lib  README.rst  common.f90  copyc6.f90  dftd3.f  dftd3.f90  libdftd3.f90  main.f90  make.arch  param.f90  pars.f90  test_libdftd3.f90
lib/: CMakeLists.txt  GNUmakefile  api.f90  common.f90  core.f90  pars.f90  sizes.f90
prg/: CMakeLists.txt  GNUmakefile  dftd3.f90  extras.f90  main.f90
test/: testapi.f90
